# CertificateVerificationSystem

./: .gitignore  README.md  pyproject.toml  requirements-ml.txt  requirements.txt
data/: annotation_schema.example.json
data/lookups/: branches.json  degrees.json  regulations.json  semesters.json  subject_codes.json
data/templates/ANDHRA_UNIVERSITY_DEGREE_CERTIFICATE_1998/: DOC_9E74DAB2CD88.json
data/templates/ANDHRA_UNIVERSITY_DEGREE_CERTIFICATE_2021/: DOC_5633535DE5DF.json  DOC_F489C0EA7533.json
data/templates/BOARD_OF_SECONDARY_EDUCATION_TELANGANA_SSC_CERTIFICATE_2021/: DOC_3B3ACB4467E7.json  DOC_7247425D2AF3.json  DOC_E8E0DC5CB19D.json  DOC_F7EAE8FF05B2.json
main/: __init__.py
main/api/: __init__.py  main.py
main/core/: __init__.py  baseline.py  calibration.py  fraud.py  io.py  ocr.py  pipeline.py  preprocessing.py  schemas.py  settings.py  tables.py  vocabulary.py
main/ui/: __init__.py  app.py
p1/api/: main.py
p1/core/: __init__.py  baseline.py  io.py  ocr.py  pipeline.py  preprocessing.py  schemas.py  settings.py  tables.py  vocabulary.py
p1/ui/: app.py
scratch/: check_all_years.py  check_pdf_libs.py  check_years.py  inspect_rules_pdf.py  inspect_rules_text.py  print_all_ocr_boxes.py  run_on_all_temp_files.py  run_on_user_pdf.py  run_on_user_pdf_tess.py  test_verification_logic.py
scripts/: build_template_profile.py  download_models.py  run_pipeline.py  train_calibrator.py  train_layoutlmv3.py
tests/: test_baseline.py  test_fraud_detection.py  test_integration.py  test_schema.py
(+4 files in other folders)
