[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p1-academic-field-extraction"
version = "0.1.0"
description = "Academic document field classification and extraction MVP for CONSTANT, CONTROLLED_VARIABLE, and OPEN_VARIABLE detection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "joblib>=1.3",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pandas>=2.0",
  "pillow>=11.3",
  "pydantic>=2.0",
  "python-multipart>=0.0.9",
  "pytesseract>=0.3.10",
  "rapidfuzz>=3.6",
  "scikit-learn>=1.3",
  "streamlit>=1.49",
  "uvicorn[standard]>=0.27"
]

[project.optional-dependencies]
ml = [
  "accelerate>=0.30",
  "datasets>=2.19",
  "evaluate>=0.4",
  "paddleocr==2.10.0",
  "paddlepaddle==2.6.2",
  "astor>=0.8",
  "opt-einsum==3.3.0",
  "albucore>=0.0.24",
  "albumentations>=2.0",
  "beautifulsoup4>=4.12",
  "cython>=3.0",
  "fire>=0.7",
  "fonttools>=4.5",
  "lmdb>=1.4",
  "pyclipper>=1.4",
  "python-docx>=1.2",
  "scikit-image>=0.24",
  "shapely>=2.0",
  "seqeval>=1.2",
  "transformers>=4.40"
]
pdf = [
  "pdf2image>=1.17"
]

[tool.setuptools.packages.find]
include = ["main*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
